--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
-
+    <title>JPTV</title>
   </head>
+
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <nav>
+      <span></span>
+    </nav>
+
+    <div></div>
+
+    <section>
+      <article></article>
+    </section>
+
+    <div></div>
+
+    <section>
+      <article></article>
+    </section>
+
+    <div></div>
+
+    <main>
+      <article></article>
+    </main>
     <script type="module" src="/src/renderer.ts"></script>
   </body>
 </html>
