Removing unnecessary files

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
+<html lang="en">
 
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-    <script type="module" src="/src/renderer.ts"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>JPTV</title>
+</head>
+
+<body>
+  <h1>Looking for a media player?</h1>
+  <p>Join the JPTV project the only media player you need, yeah; for free</p>
+</body>
+
 </html>
